--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
         </section>
     </main>
 </body>
